Fix Clang and rebuild issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ project(BENLIB VERSION 0.0.5 LANGUAGES CXX C)
 #   ==================================================
 
 if (NOT CMAKE_BUILD_TYPE)
-    message(STATUS "No build type selected, default to Release")
+    message(STATUS "No build type selected, default to Debug")
 else()
     message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 endif()
@@ -214,7 +214,7 @@ set(WARNINGS_COMPILER_CXX "${WARNINGS_COMPILER_CXX} -Wduplicated-branches -Wdupl
 #-ftime-report -static -lrt -pthread -Wl,--whole-archive -lpthread -Wl,--no-whole-archive -flto
 
 #Add -lstdc++fs for old compiler
-set(CMAKE_CXX_FLAGS                "${WARNINGS_COMPILER_CXX} -fuse-ld=lld -pipe -pthread -lstdc++fs -Wl,-rpath,../lib -Wl,-rpath,../external/lib -pthread")
+set(CMAKE_CXX_FLAGS                "${WARNINGS_COMPILER_CXX} -fuse-ld=lld -pipe -lstdc++fs -Wl,-rpath,../lib -Wl,-rpath,../external/lib")
 set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os ${OPTI_COMPILER_REL} ${SEC_COMPILER_REL} -DNDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE        "-O3 ${OPTI_COMPILER_REL} ${SEC_COMPILER_REL} -DNDEBUG")
 set(CMAKE_CXX_FLAGS_DEBUG          "-g3 -Og -ggdb3 ${OPTI_COMPILER_REL} -pg") # Remove -v
@@ -286,6 +286,10 @@ set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
     #CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
 #    CMAKE_ARGS -DCMAKE_BUILD_TYPE=Release
 #)
+
+#   ================    OpenMP    ================
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 #   ================    OpenMP    ================
 # https://stackoverflow.com/a/12404666/10152334
@@ -690,23 +694,23 @@ set(CUSTOM_LIBS texture convert_utils math utils_opencv utils_opengl time cpu ve
 #   ==================================================
 
 add_executable(bench_isprime ${BENCH_ISPRIME})
-target_link_libraries(bench_isprime PRIVATE thread vector math time stdc++fs)
+target_link_libraries(bench_isprime PRIVATE thread Threads::Threads vector math time stdc++fs)
 add_dependencies(bench_isprime ${CUSTOM_LIBS})
 
 add_executable(bench_vector_copy ${BENCH_VECTOR_COPY})
-target_link_libraries(bench_vector_copy PRIVATE thread vector math time stdc++fs)
+target_link_libraries(bench_vector_copy PRIVATE thread Threads::Threads vector math time stdc++fs)
 add_dependencies(bench_vector_copy ${CUSTOM_LIBS})
 
 add_executable(bench_vector_sort ${BENCH_VECTOR_SORT})
-target_link_libraries(bench_vector_sort PRIVATE thread vector math time stdc++fs)
+target_link_libraries(bench_vector_sort PRIVATE thread Threads::Threads vector math time stdc++fs)
 add_dependencies(bench_vector_sort ${CUSTOM_LIBS})
 
 add_executable(bench_digits_count ${BENCH_DIGITS_COUNT})
-target_link_libraries(bench_digits_count PRIVATE thread vector math time stdc++fs)
+target_link_libraries(bench_digits_count PRIVATE thread Threads::Threads vector math time stdc++fs)
 add_dependencies(bench_digits_count ${CUSTOM_LIBS})
 
 add_executable(bench_find_max ${BENCH_FIND_MAX})
-target_link_libraries(bench_find_max PRIVATE thread vector math time)
+target_link_libraries(bench_find_max PRIVATE thread Threads::Threads vector math time)
 add_dependencies(bench_find_max ${CUSTOM_LIBS})
 
 add_executable(bench_pc ${BENCH_PC})
@@ -715,9 +719,9 @@ add_dependencies(bench_pc ${CUSTOM_LIBS})
 
 add_executable(bench_crc32 ${BENCH_CRC32})
 if(OpenMP_CXX_FOUND)
-    target_link_libraries(bench_crc32 PRIVATE thread vector my_crypto math time stdc++fs OpenMP::OpenMP_CXX)
+    target_link_libraries(bench_crc32 PRIVATE thread Threads::Threads vector my_crypto math time stdc++fs OpenMP::OpenMP_CXX)
 else()
-    target_link_libraries(bench_crc32 PRIVATE thread vector my_crypto math time stdc++fs)
+    target_link_libraries(bench_crc32 PRIVATE thread Threads::Threads vector my_crypto math time stdc++fs)
 endif()
 add_dependencies(bench_crc32 ${CUSTOM_LIBS})
 
@@ -796,7 +800,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_SCHWARZSCHILD} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_SCHWARZSCHILD} ${Boost_LIBRARIES})
+    target_link_libraries(${TEST_SCHWARZSCHILD} PRIVATE ${Boost_LIBRARIES})
     add_test(NAME ${TEST_SCHWARZSCHILD} COMMAND ${CMAKE_COMMAND} --build . --target ${TEST_SCHWARZSCHILD})
 
     #Test getGravitationalAttraction
@@ -805,7 +809,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_GA} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_GA} ${Boost_LIBRARIES})
+    target_link_libraries(${TEST_GA} PRIVATE ${Boost_LIBRARIES})
     add_test(NAME ${TEST_GA} COMMAND ${TEST_GA})
 
     #Test sphere
@@ -814,7 +818,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_SPHERE} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_SPHERE} ${Boost_LIBRARIES} quadmath)
+    target_link_libraries(${TEST_SPHERE} PRIVATE ${Boost_LIBRARIES} quadmath)
     add_test(NAME ${TEST_SPHERE} COMMAND ${TEST_SPHERE})
 
     #Test cylinder
@@ -823,7 +827,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_CYLINDER} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_CYLINDER} ${Boost_LIBRARIES})
+    target_link_libraries(${TEST_CYLINDER} PRIVATE ${Boost_LIBRARIES})
     add_test(NAME ${TEST_CYLINDER} COMMAND ${TEST_CYLINDER})
 
     #Test vector sort
@@ -832,7 +836,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_VECTOR_SORT} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_VECTOR_SORT} ${Boost_LIBRARIES} vector)
+    target_link_libraries(${TEST_VECTOR_SORT} PRIVATE ${Boost_LIBRARIES} vector)
     add_test(NAME ${TEST_VECTOR_SORT} COMMAND ${TEST_VECTOR_SORT})
 
     #Test vector copy
@@ -841,7 +845,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_VECTOR_COPY} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_VECTOR_COPY} ${Boost_LIBRARIES} vector)
+    target_link_libraries(${TEST_VECTOR_COPY} PRIVATE ${Boost_LIBRARIES} vector)
     add_test(NAME ${TEST_VECTOR_COPY} COMMAND ${TEST_VECTOR_COPY})
 
     #Test vector copy
@@ -850,7 +854,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_VECTOR_MAX_SIMD} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_VECTOR_MAX_SIMD} ${Boost_LIBRARIES} vector)
+    target_link_libraries(${TEST_VECTOR_MAX_SIMD} PRIVATE ${Boost_LIBRARIES} vector)
     add_test(NAME ${TEST_VECTOR_MAX_SIMD} COMMAND ${TEST_VECTOR_MAX_SIMD})
 
     set(TEST_STRING_SEQ test_string_seq)
@@ -858,7 +862,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_STRING_SEQ} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_STRING_SEQ} ${Boost_LIBRARIES} string_lib)
+    target_link_libraries(${TEST_STRING_SEQ} PRIVATE ${Boost_LIBRARIES} string_lib)
     add_test(NAME ${TEST_STRING_SEQ} COMMAND ${TEST_STRING_SEQ})
 endif()
 
@@ -869,7 +873,7 @@ if (OPENSSL_FOUND AND Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_CRYPTO} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_CRYPTO} ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto)
+    target_link_libraries(${TEST_CRYPTO} PRIVATE ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto)
     add_test(NAME ${TEST_CRYPTO} COMMAND ${TEST_CRYPTO})
 
     #Test crypto AES
@@ -878,7 +882,7 @@ if (OPENSSL_FOUND AND Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_CRYPTO_AES} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_CRYPTO_AES} ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto)
+    target_link_libraries(${TEST_CRYPTO_AES} PRIVATE ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} my_crypto)
     add_test(NAME ${TEST_CRYPTO_AES} COMMAND ${TEST_CRYPTO_AES})
 
     set(TEST_CRYPTO_CRC test_crypto_CRC)
@@ -886,7 +890,7 @@ if (OPENSSL_FOUND AND Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_CRYPTO_CRC} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_CRYPTO_CRC} ${Boost_LIBRARIES} my_crypto)
+    target_link_libraries(${TEST_CRYPTO_CRC} PRIVATE ${Boost_LIBRARIES} my_crypto)
     add_test(NAME ${TEST_CRYPTO_CRC} COMMAND ${TEST_CRYPTO_CRC})
 endif()
 
@@ -898,7 +902,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_REV_STR} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_REV_STR} ${Boost_LIBRARIES} string_c)
+    target_link_libraries(${TEST_REV_STR} PRIVATE ${Boost_LIBRARIES} string_c)
     add_test(NAME ${TEST_REV_STR} COMMAND ${TEST_REV_STR})
 
     set(TEST_IS_NUM test_my_isnum)
@@ -906,7 +910,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_IS_NUM} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_IS_NUM} ${Boost_LIBRARIES} string_is_c)
+    target_link_libraries(${TEST_IS_NUM} PRIVATE ${Boost_LIBRARIES} string_is_c)
     add_test(NAME ${TEST_IS_NUM} COMMAND ${TEST_IS_NUM})
 
     set(TEST_STR_IS_NUM test_my_str_isnum)
@@ -914,7 +918,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_STR_IS_NUM} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_STR_IS_NUM} ${Boost_LIBRARIES} string_is_c)
+    target_link_libraries(${TEST_STR_IS_NUM} PRIVATE ${Boost_LIBRARIES} string_is_c)
     add_test(NAME ${TEST_STR_IS_NUM} COMMAND ${TEST_STR_IS_NUM})
 
 
@@ -924,7 +928,7 @@ if(Boost_FOUND)
     if(EXTERNAL_LIB)
         add_dependencies(${TEST_POWER} ${EXTERNAL_LIB})
     endif()
-    target_link_libraries(${TEST_POWER} ${Boost_LIBRARIES})
+    target_link_libraries(${TEST_POWER} PRIVATE ${Boost_LIBRARIES})
     add_test(NAME ${TEST_POWER} COMMAND ${TEST_POWER})
 endif()
 #add_test(NAME ${TEST_POWER} COMMAND ${CMAKE_COMMAND} --build . --target ${TEST_POWER})
