--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -147,9 +147,8 @@ if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
 else()
     message(STATUS "CMAKE_UNITY_BUILD : 0 on ${PROJECT_NAME}")
 endif()
-
-set_property(TARGET my_cuda PROPERTY CUDA_ARCHITECTURES 52 60 62 70 72 75)
-
+set_property(TARGET my_cuda PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
+#target_link_libraries(my_cuda PRIVATE ${CUDA_LIBRARIES})
 
 if(APPLE)
   # We need to add the path to the driver (libcuda.dylib) as an rpath, 
@@ -166,64 +165,57 @@ if(UNIX)
 endif()
 
 add_executable(vec1d vec1d.c)
-target_link_libraries(vec1d ${CUDA_LIBRARIES})
-target_link_libraries(vec1d my_cuda)
-set_property(TARGET vec1d PROPERTY CUDA_ARCHITECTURES 72)
+target_link_libraries(vec1d PRIVATE ${CUDA_LIBRARIES} my_cuda m)
+set_property(TARGET vec1d PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 add_executable(vec2d_mult vec2d_mult.c)
 if (OPENMP_FOUND)
-    target_link_libraries(vec2d_mult ${CUDA_LIBRARIES} OpenMP::OpenMP_C)
+    target_link_libraries(vec2d_mult PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_C my_cuda)
 else()
-target_link_libraries(vec2d_mult ${CUDA_LIBRARIES})
+    target_link_libraries(vec2d_mult PRIVATE ${CUDA_LIBRARIES} my_cuda)
 endif()
-target_link_libraries(vec2d_mult my_cuda)
-set_property(TARGET vec2d_mult PROPERTY CUDA_ARCHITECTURES 72)
+set_property(TARGET vec2d_mult PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 
 add_executable(vec2d_add vec2d_add.c)
 if (OPENMP_FOUND)
-    target_link_libraries(vec2d_add ${CUDA_LIBRARIES} OpenMP::OpenMP_C)
+    target_link_libraries(vec2d_add PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_C my_cuda)
 else()
-target_link_libraries(vec2d_add ${CUDA_LIBRARIES})
+    target_link_libraries(vec2d_add PRIVATE ${CUDA_LIBRARIES} my_cuda)
 endif()
-target_link_libraries(vec2d_add my_cuda)
-set_property(TARGET vec2d_add PROPERTY CUDA_ARCHITECTURES 72)
+set_property(TARGET vec2d_add PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 add_executable(vec2d_mult2 vec2d_mult.cpp)
 if (OPENMP_FOUND)
-    target_link_libraries(vec2d_mult2 ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+    target_link_libraries(vec2d_mult2 PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX my_cuda)
 else()
-target_link_libraries(vec2d_mult2 ${CUDA_LIBRARIES})
+    target_link_libraries(vec2d_mult2 PRIVATE ${CUDA_LIBRARIES} my_cuda)
 endif()
-target_link_libraries(vec2d_mult2 my_cuda)
-set_property(TARGET vec2d_mult2 PROPERTY CUDA_ARCHITECTURES 72)
+set_property(TARGET vec2d_mult2 PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 add_executable(vec2d_mult3 vec2d_mult3.cpp)
 if (OPENMP_FOUND)
-    target_link_libraries(vec2d_mult3 ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+    target_link_libraries(vec2d_mult3 PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX my_cuda)
 else()
-target_link_libraries(vec2d_mult3 ${CUDA_LIBRARIES})
+    target_link_libraries(vec2d_mult3 PRIVATE ${CUDA_LIBRARIES} my_cuda)
 endif()
-target_link_libraries(vec2d_mult3 my_cuda)
-set_property(TARGET vec2d_mult3 PROPERTY CUDA_ARCHITECTURES 72)
+set_property(TARGET vec2d_mult3 PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 add_executable(vec3d_mult vec3d_mult.cpp)
 if (OPENMP_FOUND)
-    target_link_libraries(vec3d_mult ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+    target_link_libraries(vec3d_mult PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX my_cuda)
 else()
-target_link_libraries(vec3d_mult ${CUDA_LIBRARIES})
+    target_link_libraries(vec3d_mult PRIVATE ${CUDA_LIBRARIES} my_cuda)
 endif()
-target_link_libraries(vec3d_mult my_cuda)
-set_property(TARGET vec3d_mult PROPERTY CUDA_ARCHITECTURES 72)
+set_property(TARGET vec3d_mult PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 add_executable(vec3d_mult2 vec3d_mult2.cpp)
 if (OPENMP_FOUND)
-    target_link_libraries(vec3d_mult2 ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
+    target_link_libraries(vec3d_mult2 PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX my_cuda)
 else()
-target_link_libraries(vec3d_mult2 ${CUDA_LIBRARIES})
+    target_link_libraries(vec3d_mult2 PRIVATE ${CUDA_LIBRARIES} my_cuda)
 endif()
-target_link_libraries(vec3d_mult2 my_cuda)
-set_property(TARGET vec3d_mult2 PROPERTY CUDA_ARCHITECTURES 72)
+set_property(TARGET vec3d_mult2 PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 
 
 install(TARGETS
